exports[`Widgets Component class should render all base children 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="widgets">
    <div
        className="widget-form">
        <form
            onSubmit={undefined}>
            <h1>
                CREATE THE WIDGET
            </h1>
            <label
                htmlFor="name">
                Name
            </label>
            <Field
                className="name"
                component={[Function]}
                id="name"
                name="name"
                type="text"
                validate={[Function]} />
            <label
                htmlFor="description">
                Description
            </label>
            <Field
                className="description"
                component="input"
                id="description"
                name="description"
                type="text" />
            <label
                htmlFor="size">
                Size
            </label>
            <Field
                className="number"
                component="input"
                id="size"
                name="size"
                type="number" />
            <button
                action="submit"
                disabled={false}>
                CREATE
            </button>
        </form>
        <hr />
        <div
            className="widget-messages">
            
        </div>
    </div>
    <div
        className="widget-list">
        <table>
            <thead>
                <tr>
                    <th>
                        Name
                    </th>
                    <th>
                        Description
                    </th>
                    <th>
                        Size
                    </th>
                </tr>
            </thead>
            <tbody>
                <tr>
                    <td>
                        <strong>
                            test-widget
                        </strong>
                    </td>
                    <td>
                        undefined
                    </td>
                    <td>
                        1
                    </td>
                </tr>
            </tbody>
        </table>
        <button
            onClick={[Function]}>
            Refetch Widgets!
        </button>
    </div>
</div>,
  "nodes": Array [
    <div
      className="widgets">
      <div
            className="widget-form">
            <form
                  onSubmit={undefined}>
                  <h1>
                        CREATE THE WIDGET
                  </h1>
                  <label
                        htmlFor="name">
                        Name
                  </label>
                  <Field
                        className="name"
                        component={[Function]}
                        id="name"
                        name="name"
                        type="text"
                        validate={[Function]} />
                  <label
                        htmlFor="description">
                        Description
                  </label>
                  <Field
                        className="description"
                        component="input"
                        id="description"
                        name="description"
                        type="text" />
                  <label
                        htmlFor="size">
                        Size
                  </label>
                  <Field
                        className="number"
                        component="input"
                        id="size"
                        name="size"
                        type="number" />
                  <button
                        action="submit"
                        disabled={false}>
                        CREATE
                  </button>
            </form>
            <hr />
            <div
                  className="widget-messages">
                  
            </div>
      </div>
      <div
            className="widget-list">
            <table>
                  <thead>
                        <tr>
                              <th>
                                    Name
                              </th>
                              <th>
                                    Description
                              </th>
                              <th>
                                    Size
                              </th>
                        </tr>
                  </thead>
                  <tbody>
                        <tr>
                              <td>
                                    <strong>
                                          test-widget
                                    </strong>
                              </td>
                              <td>
                                    undefined
                              </td>
                              <td>
                                    1
                              </td>
                        </tr>
                  </tbody>
            </table>
            <button
                  onClick={[Function]}>
                  Refetch Widgets!
            </button>
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Widgets
        client={
                Object {
                        "id": "test",
                        "token": Object {
                          "test": "token",
                        },
                      }
        }
        handleSubmit={[Function]}
        invalid={false}
        reset={[Function]}
        widgetCreate={[Function]}
        widgetRequest={[Function]}
        widgets={
                Object {
                        "errors": Array [],
                        "list": Array [
                          Object {
                            "descripton": "test test widget..",
                            "id": "123abc",
                            "name": "test-widget",
                            "size": 1,
                          },
                        ],
                        "messages": Array [],
                        "requesting": false,
                        "successful": false,
                      }
        } />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Widgets {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "fetchWidgets": [Function],
        "props": Object {
          "client": Object {
            "id": "test",
            "token": Object {
              "test": "token",
            },
          },
          "handleSubmit": [Function],
          "invalid": false,
          "reset": [Function],
          "widgetCreate": [Function],
          "widgetRequest": [Function],
          "widgets": Object {
            "errors": Array [],
            "list": Array [
              Object {
                "descripton": "test test widget..",
                "id": "123abc",
                "name": "test-widget",
                "size": 1,
              },
            ],
            "messages": Array [],
            "requesting": false,
            "successful": false,
          },
        },
        "refs": Object {},
        "renderNameInput": [Function],
        "state": null,
        "submit": [Function],
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="widgets">
          <div
                    className="widget-form">
                    <form
                              onSubmit={undefined}>
                              <h1>
                                        CREATE THE WIDGET
                              </h1>
                              <label
                                        htmlFor="name">
                                        Name
                              </label>
                              <Field
                                        className="name"
                                        component={[Function]}
                                        id="name"
                                        name="name"
                                        type="text"
                                        validate={[Function]} />
                              <label
                                        htmlFor="description">
                                        Description
                              </label>
                              <Field
                                        className="description"
                                        component="input"
                                        id="description"
                                        name="description"
                                        type="text" />
                              <label
                                        htmlFor="size">
                                        Size
                              </label>
                              <Field
                                        className="number"
                                        component="input"
                                        id="size"
                                        name="size"
                                        type="number" />
                              <button
                                        action="submit"
                                        disabled={false}>
                                        CREATE
                              </button>
                    </form>
                    <hr />
                    <div
                              className="widget-messages">
                              
                    </div>
          </div>
          <div
                    className="widget-list">
                    <table>
                              <thead>
                                        <tr>
                                                  <th>
                                                            Name
                                                  </th>
                                                  <th>
                                                            Description
                                                  </th>
                                                  <th>
                                                            Size
                                                  </th>
                                        </tr>
                              </thead>
                              <tbody>
                                        <tr>
                                                  <td>
                                                            <strong>
                                                                      test-widget
                                                            </strong>
                                                  </td>
                                                  <td>
                                                            undefined
                                                  </td>
                                                  <td>
                                                            1
                                                  </td>
                                        </tr>
                              </tbody>
                    </table>
                    <button
                              onClick={[Function]}>
                              Refetch Widgets!
                    </button>
          </div>
</div>,
        "_debugID": 2,
        "_renderedOutput": <div
          className="widgets">
          <div
                    className="widget-form">
                    <form
                              onSubmit={undefined}>
                              <h1>
                                        CREATE THE WIDGET
                              </h1>
                              <label
                                        htmlFor="name">
                                        Name
                              </label>
                              <Field
                                        className="name"
                                        component={[Function]}
                                        id="name"
                                        name="name"
                                        type="text"
                                        validate={[Function]} />
                              <label
                                        htmlFor="description">
                                        Description
                              </label>
                              <Field
                                        className="description"
                                        component="input"
                                        id="description"
                                        name="description"
                                        type="text" />
                              <label
                                        htmlFor="size">
                                        Size
                              </label>
                              <Field
                                        className="number"
                                        component="input"
                                        id="size"
                                        name="size"
                                        type="number" />
                              <button
                                        action="submit"
                                        disabled={false}>
                                        CREATE
                              </button>
                    </form>
                    <hr />
                    <div
                              className="widget-messages">
                              
                    </div>
          </div>
          <div
                    className="widget-list">
                    <table>
                              <thead>
                                        <tr>
                                                  <th>
                                                            Name
                                                  </th>
                                                  <th>
                                                            Description
                                                  </th>
                                                  <th>
                                                            Size
                                                  </th>
                                        </tr>
                              </thead>
                              <tbody>
                                        <tr>
                                                  <td>
                                                            <strong>
                                                                      test-widget
                                                            </strong>
                                                  </td>
                                                  <td>
                                                            undefined
                                                  </td>
                                                  <td>
                                                            1
                                                  </td>
                                        </tr>
                              </tbody>
                    </table>
                    <button
                              onClick={[Function]}>
                              Refetch Widgets!
                    </button>
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Widgets
    client={
        Object {
            "id": "test",
            "token": Object {
              "test": "token",
            },
          }
    }
    handleSubmit={[Function]}
    invalid={false}
    reset={[Function]}
    widgetCreate={[Function]}
    widgetRequest={[Function]}
    widgets={
        Object {
            "errors": Array [],
            "list": Array [
              Object {
                "descripton": "test test widget..",
                "id": "123abc",
                "name": "test-widget",
                "size": 1,
              },
            ],
            "messages": Array [],
            "requesting": false,
            "successful": false,
          }
    } />,
}
`;

exports[`Widgets Component class should render all base children 2`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="widgets">
    <div
        className="widget-form">
        <form
            onSubmit={undefined}>
            <h1>
                CREATE THE WIDGET
            </h1>
            <label
                htmlFor="name">
                Name
            </label>
            <Field
                className="name"
                component={[Function]}
                id="name"
                name="name"
                type="text"
                validate={[Function]} />
            <label
                htmlFor="description">
                Description
            </label>
            <Field
                className="description"
                component="input"
                id="description"
                name="description"
                type="text" />
            <label
                htmlFor="size">
                Size
            </label>
            <Field
                className="number"
                component="input"
                id="size"
                name="size"
                type="number" />
            <button
                action="submit"
                disabled={false}>
                CREATE
            </button>
        </form>
        <hr />
        <div
            className="widget-messages">
            <span>
                Creating widget...
            </span>
        </div>
    </div>
    <div
        className="widget-list">
        <table>
            <thead>
                <tr>
                    <th>
                        Name
                    </th>
                    <th>
                        Description
                    </th>
                    <th>
                        Size
                    </th>
                </tr>
            </thead>
            <tbody>
                <tr>
                    <td>
                        <strong>
                            test-widget
                        </strong>
                    </td>
                    <td>
                        undefined
                    </td>
                    <td>
                        1
                    </td>
                </tr>
            </tbody>
        </table>
        <button
            onClick={[Function]}>
            Refetch Widgets!
        </button>
    </div>
</div>,
  "nodes": Array [
    <div
      className="widgets">
      <div
            className="widget-form">
            <form
                  onSubmit={undefined}>
                  <h1>
                        CREATE THE WIDGET
                  </h1>
                  <label
                        htmlFor="name">
                        Name
                  </label>
                  <Field
                        className="name"
                        component={[Function]}
                        id="name"
                        name="name"
                        type="text"
                        validate={[Function]} />
                  <label
                        htmlFor="description">
                        Description
                  </label>
                  <Field
                        className="description"
                        component="input"
                        id="description"
                        name="description"
                        type="text" />
                  <label
                        htmlFor="size">
                        Size
                  </label>
                  <Field
                        className="number"
                        component="input"
                        id="size"
                        name="size"
                        type="number" />
                  <button
                        action="submit"
                        disabled={false}>
                        CREATE
                  </button>
            </form>
            <hr />
            <div
                  className="widget-messages">
                  <span>
                        Creating widget...
                  </span>
            </div>
      </div>
      <div
            className="widget-list">
            <table>
                  <thead>
                        <tr>
                              <th>
                                    Name
                              </th>
                              <th>
                                    Description
                              </th>
                              <th>
                                    Size
                              </th>
                        </tr>
                  </thead>
                  <tbody>
                        <tr>
                              <td>
                                    <strong>
                                          test-widget
                                    </strong>
                              </td>
                              <td>
                                    undefined
                              </td>
                              <td>
                                    1
                              </td>
                        </tr>
                  </tbody>
            </table>
            <button
                  onClick={[Function]}>
                  Refetch Widgets!
            </button>
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Widgets
        client={
                Object {
                        "id": "test",
                        "token": Object {
                          "test": "token",
                        },
                      }
        }
        handleSubmit={[Function]}
        invalid={false}
        reset={[Function]}
        widgetCreate={[Function]}
        widgetRequest={[Function]}
        widgets={
                Object {
                        "errors": Array [],
                        "list": Array [
                          Object {
                            "descripton": "test test widget..",
                            "id": "123abc",
                            "name": "test-widget",
                            "size": 1,
                          },
                        ],
                        "messages": Array [],
                        "requesting": true,
                        "successful": false,
                      }
        } />,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Widgets {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "fetchWidgets": [Function],
        "props": Object {
          "client": Object {
            "id": "test",
            "token": Object {
              "test": "token",
            },
          },
          "handleSubmit": [Function],
          "invalid": false,
          "reset": [Function],
          "widgetCreate": [Function],
          "widgetRequest": [Function],
          "widgets": Object {
            "errors": Array [],
            "list": Array [
              Object {
                "descripton": "test test widget..",
                "id": "123abc",
                "name": "test-widget",
                "size": 1,
              },
            ],
            "messages": Array [],
            "requesting": true,
            "successful": false,
          },
        },
        "refs": Object {},
        "renderNameInput": [Function],
        "state": null,
        "submit": [Function],
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="widgets">
          <div
                    className="widget-form">
                    <form
                              onSubmit={undefined}>
                              <h1>
                                        CREATE THE WIDGET
                              </h1>
                              <label
                                        htmlFor="name">
                                        Name
                              </label>
                              <Field
                                        className="name"
                                        component={[Function]}
                                        id="name"
                                        name="name"
                                        type="text"
                                        validate={[Function]} />
                              <label
                                        htmlFor="description">
                                        Description
                              </label>
                              <Field
                                        className="description"
                                        component="input"
                                        id="description"
                                        name="description"
                                        type="text" />
                              <label
                                        htmlFor="size">
                                        Size
                              </label>
                              <Field
                                        className="number"
                                        component="input"
                                        id="size"
                                        name="size"
                                        type="number" />
                              <button
                                        action="submit"
                                        disabled={false}>
                                        CREATE
                              </button>
                    </form>
                    <hr />
                    <div
                              className="widget-messages">
                              <span>
                                        Creating widget...
                              </span>
                    </div>
          </div>
          <div
                    className="widget-list">
                    <table>
                              <thead>
                                        <tr>
                                                  <th>
                                                            Name
                                                  </th>
                                                  <th>
                                                            Description
                                                  </th>
                                                  <th>
                                                            Size
                                                  </th>
                                        </tr>
                              </thead>
                              <tbody>
                                        <tr>
                                                  <td>
                                                            <strong>
                                                                      test-widget
                                                            </strong>
                                                  </td>
                                                  <td>
                                                            undefined
                                                  </td>
                                                  <td>
                                                            1
                                                  </td>
                                        </tr>
                              </tbody>
                    </table>
                    <button
                              onClick={[Function]}>
                              Refetch Widgets!
                    </button>
          </div>
</div>,
        "_debugID": 4,
        "_renderedOutput": <div
          className="widgets">
          <div
                    className="widget-form">
                    <form
                              onSubmit={undefined}>
                              <h1>
                                        CREATE THE WIDGET
                              </h1>
                              <label
                                        htmlFor="name">
                                        Name
                              </label>
                              <Field
                                        className="name"
                                        component={[Function]}
                                        id="name"
                                        name="name"
                                        type="text"
                                        validate={[Function]} />
                              <label
                                        htmlFor="description">
                                        Description
                              </label>
                              <Field
                                        className="description"
                                        component="input"
                                        id="description"
                                        name="description"
                                        type="text" />
                              <label
                                        htmlFor="size">
                                        Size
                              </label>
                              <Field
                                        className="number"
                                        component="input"
                                        id="size"
                                        name="size"
                                        type="number" />
                              <button
                                        action="submit"
                                        disabled={false}>
                                        CREATE
                              </button>
                    </form>
                    <hr />
                    <div
                              className="widget-messages">
                              <span>
                                        Creating widget...
                              </span>
                    </div>
          </div>
          <div
                    className="widget-list">
                    <table>
                              <thead>
                                        <tr>
                                                  <th>
                                                            Name
                                                  </th>
                                                  <th>
                                                            Description
                                                  </th>
                                                  <th>
                                                            Size
                                                  </th>
                                        </tr>
                              </thead>
                              <tbody>
                                        <tr>
                                                  <td>
                                                            <strong>
                                                                      test-widget
                                                            </strong>
                                                  </td>
                                                  <td>
                                                            undefined
                                                  </td>
                                                  <td>
                                                            1
                                                  </td>
                                        </tr>
                              </tbody>
                    </table>
                    <button
                              onClick={[Function]}>
                              Refetch Widgets!
                    </button>
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Widgets
    client={
        Object {
            "id": "test",
            "token": Object {
              "test": "token",
            },
          }
    }
    handleSubmit={[Function]}
    invalid={false}
    reset={[Function]}
    widgetCreate={[Function]}
    widgetRequest={[Function]}
    widgets={
        Object {
            "errors": Array [],
            "list": Array [
              Object {
                "descripton": "test test widget..",
                "id": "123abc",
                "name": "test-widget",
                "size": 1,
              },
            ],
            "messages": Array [],
            "requesting": true,
            "successful": false,
          }
    } />,
}
`;

exports[`Widgets Component class should render all base children 3`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="widgets">
    <div
        className="widget-form">
        <form
            onSubmit={undefined}>
            <h1>
                CREATE THE WIDGET
            </h1>
            <label
                htmlFor="name">
                Name
            </label>
            <Field
                className="name"
                component={[Function]}
                id="name"
                name="name"
                type="text"
                validate={[Function]} />
            <label
                htmlFor="description">
                Description
            </label>
            <Field
                className="description"
                component="input"
                id="description"
                name="description"
                type="text" />
            <label
                htmlFor="size">
                Size
            </label>
            <Field
                className="number"
                component="input"
                id="size"
                name="size"
                type="number" />
            <button
                action="submit"
                disabled={false}>
                CREATE
            </button>
        </form>
        <hr />
        <div
            className="widget-messages">
            <Errors
                errors={
                    Array [
                        Object {},
                      ]
                }
                message="Failure to create Widget due to:" />
            <Messages
                messages={
                    Array [
                        Object {
                          "msg": "message",
                        },
                      ]
                } />
        </div>
    </div>
    <div
        className="widget-list">
        <table>
            <thead>
                <tr>
                    <th>
                        Name
                    </th>
                    <th>
                        Description
                    </th>
                    <th>
                        Size
                    </th>
                </tr>
            </thead>
            <tbody>
                <tr>
                    <td>
                        <strong>
                            test-widget
                        </strong>
                    </td>
                    <td>
                        undefined
                    </td>
                    <td>
                        1
                    </td>
                </tr>
            </tbody>
        </table>
        <button
            onClick={[Function]}>
            Refetch Widgets!
        </button>
    </div>
</div>,
  "nodes": Array [
    <div
      className="widgets">
      <div
            className="widget-form">
            <form
                  onSubmit={undefined}>
                  <h1>
                        CREATE THE WIDGET
                  </h1>
                  <label
                        htmlFor="name">
                        Name
                  </label>
                  <Field
                        className="name"
                        component={[Function]}
                        id="name"
                        name="name"
                        type="text"
                        validate={[Function]} />
                  <label
                        htmlFor="description">
                        Description
                  </label>
                  <Field
                        className="description"
                        component="input"
                        id="description"
                        name="description"
                        type="text" />
                  <label
                        htmlFor="size">
                        Size
                  </label>
                  <Field
                        className="number"
                        component="input"
                        id="size"
                        name="size"
                        type="number" />
                  <button
                        action="submit"
                        disabled={false}>
                        CREATE
                  </button>
            </form>
            <hr />
            <div
                  className="widget-messages">
                  <Errors
                        errors={
                              Array [
                                    Object {},
                                  ]
                        }
                        message="Failure to create Widget due to:" />
                  <Messages
                        messages={
                              Array [
                                    Object {
                                      "msg": "message",
                                    },
                                  ]
                        } />
            </div>
      </div>
      <div
            className="widget-list">
            <table>
                  <thead>
                        <tr>
                              <th>
                                    Name
                              </th>
                              <th>
                                    Description
                              </th>
                              <th>
                                    Size
                              </th>
                        </tr>
                  </thead>
                  <tbody>
                        <tr>
                              <td>
                                    <strong>
                                          test-widget
                                    </strong>
                              </td>
                              <td>
                                    undefined
                              </td>
                              <td>
                                    1
                              </td>
                        </tr>
                  </tbody>
            </table>
            <button
                  onClick={[Function]}>
                  Refetch Widgets!
            </button>
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Widgets
        client={
                Object {
                        "id": "test",
                        "token": Object {
                          "test": "token",
                        },
                      }
        }
        handleSubmit={[Function]}
        invalid={false}
        reset={[Function]}
        widgetCreate={[Function]}
        widgetRequest={[Function]}
        widgets={
                Object {
                        "errors": Array [
                          Object {},
                        ],
                        "list": Array [
                          Object {
                            "descripton": "test test widget..",
                            "id": "123abc",
                            "name": "test-widget",
                            "size": 1,
                          },
                        ],
                        "messages": Array [
                          Object {
                            "msg": "message",
                          },
                        ],
                        "requesting": false,
                        "successful": true,
                      }
        } />,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Widgets {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "fetchWidgets": [Function],
        "props": Object {
          "client": Object {
            "id": "test",
            "token": Object {
              "test": "token",
            },
          },
          "handleSubmit": [Function],
          "invalid": false,
          "reset": [Function],
          "widgetCreate": [Function],
          "widgetRequest": [Function],
          "widgets": Object {
            "errors": Array [
              Object {},
            ],
            "list": Array [
              Object {
                "descripton": "test test widget..",
                "id": "123abc",
                "name": "test-widget",
                "size": 1,
              },
            ],
            "messages": Array [
              Object {
                "msg": "message",
              },
            ],
            "requesting": false,
            "successful": true,
          },
        },
        "refs": Object {},
        "renderNameInput": [Function],
        "state": null,
        "submit": [Function],
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="widgets">
          <div
                    className="widget-form">
                    <form
                              onSubmit={undefined}>
                              <h1>
                                        CREATE THE WIDGET
                              </h1>
                              <label
                                        htmlFor="name">
                                        Name
                              </label>
                              <Field
                                        className="name"
                                        component={[Function]}
                                        id="name"
                                        name="name"
                                        type="text"
                                        validate={[Function]} />
                              <label
                                        htmlFor="description">
                                        Description
                              </label>
                              <Field
                                        className="description"
                                        component="input"
                                        id="description"
                                        name="description"
                                        type="text" />
                              <label
                                        htmlFor="size">
                                        Size
                              </label>
                              <Field
                                        className="number"
                                        component="input"
                                        id="size"
                                        name="size"
                                        type="number" />
                              <button
                                        action="submit"
                                        disabled={false}>
                                        CREATE
                              </button>
                    </form>
                    <hr />
                    <div
                              className="widget-messages">
                              <Errors
                                        errors={
                                                  Array [
                                                            Object {},
                                                          ]
                                        }
                                        message="Failure to create Widget due to:" />
                              <Messages
                                        messages={
                                                  Array [
                                                            Object {
                                                              "msg": "message",
                                                            },
                                                          ]
                                        } />
                    </div>
          </div>
          <div
                    className="widget-list">
                    <table>
                              <thead>
                                        <tr>
                                                  <th>
                                                            Name
                                                  </th>
                                                  <th>
                                                            Description
                                                  </th>
                                                  <th>
                                                            Size
                                                  </th>
                                        </tr>
                              </thead>
                              <tbody>
                                        <tr>
                                                  <td>
                                                            <strong>
                                                                      test-widget
                                                            </strong>
                                                  </td>
                                                  <td>
                                                            undefined
                                                  </td>
                                                  <td>
                                                            1
                                                  </td>
                                        </tr>
                              </tbody>
                    </table>
                    <button
                              onClick={[Function]}>
                              Refetch Widgets!
                    </button>
          </div>
</div>,
        "_debugID": 6,
        "_renderedOutput": <div
          className="widgets">
          <div
                    className="widget-form">
                    <form
                              onSubmit={undefined}>
                              <h1>
                                        CREATE THE WIDGET
                              </h1>
                              <label
                                        htmlFor="name">
                                        Name
                              </label>
                              <Field
                                        className="name"
                                        component={[Function]}
                                        id="name"
                                        name="name"
                                        type="text"
                                        validate={[Function]} />
                              <label
                                        htmlFor="description">
                                        Description
                              </label>
                              <Field
                                        className="description"
                                        component="input"
                                        id="description"
                                        name="description"
                                        type="text" />
                              <label
                                        htmlFor="size">
                                        Size
                              </label>
                              <Field
                                        className="number"
                                        component="input"
                                        id="size"
                                        name="size"
                                        type="number" />
                              <button
                                        action="submit"
                                        disabled={false}>
                                        CREATE
                              </button>
                    </form>
                    <hr />
                    <div
                              className="widget-messages">
                              <Errors
                                        errors={
                                                  Array [
                                                            Object {},
                                                          ]
                                        }
                                        message="Failure to create Widget due to:" />
                              <Messages
                                        messages={
                                                  Array [
                                                            Object {
                                                              "msg": "message",
                                                            },
                                                          ]
                                        } />
                    </div>
          </div>
          <div
                    className="widget-list">
                    <table>
                              <thead>
                                        <tr>
                                                  <th>
                                                            Name
                                                  </th>
                                                  <th>
                                                            Description
                                                  </th>
                                                  <th>
                                                            Size
                                                  </th>
                                        </tr>
                              </thead>
                              <tbody>
                                        <tr>
                                                  <td>
                                                            <strong>
                                                                      test-widget
                                                            </strong>
                                                  </td>
                                                  <td>
                                                            undefined
                                                  </td>
                                                  <td>
                                                            1
                                                  </td>
                                        </tr>
                              </tbody>
                    </table>
                    <button
                              onClick={[Function]}>
                              Refetch Widgets!
                    </button>
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Widgets
    client={
        Object {
            "id": "test",
            "token": Object {
              "test": "token",
            },
          }
    }
    handleSubmit={[Function]}
    invalid={false}
    reset={[Function]}
    widgetCreate={[Function]}
    widgetRequest={[Function]}
    widgets={
        Object {
            "errors": Array [
              Object {},
            ],
            "list": Array [
              Object {
                "descripton": "test test widget..",
                "id": "123abc",
                "name": "test-widget",
                "size": 1,
              },
            ],
            "messages": Array [
              Object {
                "msg": "message",
              },
            ],
            "requesting": false,
            "successful": true,
          }
    } />,
}
`;
